--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
    <children>
-      <Label layoutX="86.0" layoutY="190.0" text="Now you can start to build the GUI and implement an awesome game">
+      <Button fx:id="btnRock" layoutX="100.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleRock" stylesheets="@../css/GameViewController.css" text="Rock">
          <font>
-            <Font size="14.0" />
+            <Font size="16.0" />
          </font>
-      </Label>
+      </Button>
+      <Button fx:id="btnPaper" layoutX="275.0" layoutY="300.0" mnemonicParsing="false" onAction="#handlePaper" stylesheets="@../css/GameViewController.css" text="Paper">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnScissor" layoutX="465.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleScissor" stylesheets="@../css/GameViewController.css" text="Scissor">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Text layoutX="220.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="407.0" layoutY="193.0">
+         <image>
+            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Scissors.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="8.0" layoutY="200.0">
+         <image>
+            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Rock.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="207.0" layoutY="193.0">
+         <image>
+            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Paper.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
