--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -9,40 +8,28 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
    <children>
-      <Button fx:id="btnRock" layoutX="100.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleRock" stylesheets="@../css/GameViewController.css" text="Rock">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnPaper" layoutX="275.0" layoutY="300.0" mnemonicParsing="false" onAction="#handlePaper" stylesheets="@../css/GameViewController.css" text="Paper">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnScissor" layoutX="465.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleScissor" stylesheets="@../css/GameViewController.css" text="Scissor">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
       <Text layoutX="220.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="407.0" layoutY="193.0">
-         <image>
-            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Scissors.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="8.0" layoutY="200.0">
-         <image>
-            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Rock.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="185.0" layoutX="207.0" layoutY="193.0">
-         <image>
-            <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Paper.png" />
-         </image>
-      </ImageView>
+      <Button fx:id="btnRock" layoutX="14.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleRock" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Rock">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnPaper" layoutX="207.0" layoutY="193.0" mnemonicParsing="false" onAction="#handlePaper" prefHeight="186.0" prefWidth="186.0" stylesheets="@../css/GameViewController.css" text="Paper">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnScissor" layoutX="407.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleScissor" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Scissor">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="RockImg" fitHeight="150.0" fitWidth="200.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="PaperImg" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ScissorsImg" fitHeight="150.0" fitWidth="200.0" layoutX="392.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
