--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -8,7 +11,12 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
    <children>
-      <Text layoutX="220.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
+      <ImageView fx:id="PlayGround" fitHeight="400.0" fitWidth="601.0" pickOnBounds="true" style="-fx-opacity: 0.5;">
+         <image>
+            <Image url="@../../../Resources/Pic/PlayGround.jpg" />
+         </image>
+      </ImageView>
+      <Text layoutX="220.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
          <font>
             <Font size="20.0" />
          </font>
@@ -18,18 +26,43 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="btnPaper" layoutX="207.0" layoutY="193.0" mnemonicParsing="false" onAction="#handlePaper" prefHeight="186.0" prefWidth="186.0" stylesheets="@../css/GameViewController.css" text="Paper">
+      <Button fx:id="btnPaper" layoutX="207.0" layoutY="193.0" mnemonicParsing="false" onAction="#handlePaper" prefHeight="186.0" prefWidth="186.0" styleClass="rps/gui/css/GameViewController.css" stylesheets="@../css/GameViewController.css" text="Paper">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="btnScissor" layoutX="407.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleScissor" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Scissor">
+      <Button fx:id="btnScissor" layoutX="393.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleScissor" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Scissor">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <ImageView fx:id="RockImg" fitHeight="150.0" fitWidth="200.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="PaperImg" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="ScissorsImg" fitHeight="150.0" fitWidth="200.0" layoutX="392.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="RockImg" fitHeight="150.0" fitWidth="200.0" layoutX="220.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Resources/Pic/Paper.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="ScissorsImg" fitHeight="150.0" fitWidth="200.0" layoutX="380.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" style="-fx-opacity: 0.7;">
+         <image>
+            <Image url="@../../../Resources/Pic/Scissors.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="PaperImg" fitHeight="150.0" fitWidth="200.0" layoutX="8.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Resources/Pic/Rock.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <TextField fx:id="txtWinningField" editable="false" layoutX="206.0" layoutY="111.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor></TextField>
    </children>
 </AnchorPane>
