--- a/src/rps/gui/view/IntroView.fxml
+++ b/src/rps/gui/view/IntroView.fxml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/IntroView.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.IntroViewController">
    <children>
-      <Button fx:id="btnPlay" layoutX="274.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleButtonPlay" stylesheets="@../css/IntroView.css" text="Play">
+      <ImageView fitHeight="407.0" fitWidth="600.0" opacity="0.4" pickOnBounds="true">
+         <image>
+            <Image url="@../../../Resources/Pic/IntroPlayGround.jpg" />
+         </image>
+      </ImageView>
+      <Button fx:id="btnPlay" layoutX="274.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleButtonPlay" style="-fx-background-color: transparant;" stylesheets="@../css/IntroView.css" text="Play">
          <font>
             <Font size="21.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Label layoutX="94.0" layoutY="79.0" stylesheets="@../css/IntroView.css" text="The best Rock Paper Scissor game of your life!">
          <font>
