--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -44,5 +45,6 @@
             <Image url="@../../../../../../Special%20Week%20uge%209%20Rock,%20Paper%20and%20Scissors/Rock-Paper-Scissor/src/Resources/Pic/Paper.png" />
          </image>
       </ImageView>
+      <TextField fx:id="txtWinningField" layoutX="170.0" layoutY="180.0" prefHeight="26.0" prefWidth="260.0" promptText="Winner" />
    </children>
 </AnchorPane>
