--- a/src/rps/gui/css/IntroView.css
+++ b/src/rps/gui/css/IntroView.css
@@ -1,12 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hanunoo&family=Noto+Sans+JP:wght@100&family=Solitreo&display=swap');
 
-    AnchorPane{
+.AnchorPane{
     -fx-font-family: 'Noto Sans Hanunoo';
 }
-Label
+.Label
 {
-
     -fx-font-family: 'Noto Sans Hanunoo';
-
+}
+.button{
+    -fx-background-color: TRANSPARENT;
+    -fx-cursor: HAND;
 }
