--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,53 +15,45 @@
             <Image url="@../../../Resources/Pic/PlayGround.jpg" />
          </image>
       </ImageView>
-      <Text layoutX="220.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnRock" layoutX="14.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleRock" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Rock">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnPaper" layoutX="207.0" layoutY="193.0" mnemonicParsing="false" onAction="#handlePaper" prefHeight="186.0" prefWidth="186.0" styleClass="rps/gui/css/GameViewController.css" stylesheets="@../css/GameViewController.css" text="Paper">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnScissor" layoutX="393.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleScissor" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css" text="Scissor">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
       <ImageView fx:id="RockImg" fitHeight="150.0" fitWidth="200.0" layoutX="220.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Resources/Pic/Paper.png" />
          </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
       </ImageView>
-      <ImageView fx:id="ScissorsImg" fitHeight="150.0" fitWidth="200.0" layoutX="380.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" style="-fx-opacity: 0.7;">
+      <ImageView fx:id="ScissorsImg" fitHeight="150.0" fitWidth="200.0" layoutX="386.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" style="-fx-opacity: 0.7;">
          <image>
             <Image url="@../../../Resources/Pic/Scissors.png" />
          </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
       </ImageView>
       <ImageView fx:id="PaperImg" fitHeight="150.0" fitWidth="200.0" layoutX="8.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Resources/Pic/Rock.png" />
          </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
       </ImageView>
-      <TextField fx:id="txtWinningField" editable="false" layoutX="206.0" layoutY="111.0">
-         <cursor>
-            <Cursor fx:constant="DEFAULT" />
-         </cursor></TextField>
+      <Text layoutX="221.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pick your Weapon">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Button fx:id="btnScissor" layoutX="393.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleScissor" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnRock" layoutX="14.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleRock" prefHeight="186.0" prefWidth="185.0" stylesheets="@../css/GameViewController.css">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnPaper" layoutX="206.0" layoutY="202.0" mnemonicParsing="false" onAction="#handlePaper" prefHeight="186.0" prefWidth="186.0" styleClass="rps/gui/css/GameViewController.css" stylesheets="@../css/GameViewController.css">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Label fx:id="txtWinningField" alignment="CENTER" layoutY="116.0" prefHeight="35.0" prefWidth="600.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
